Add pagination for getAllBasicInfo for category entity